# embedded-display-controller

./: CHANGELOG.md  Cargo.toml  README.md  README.tpl  RELEASING.md
src/: dsi.rs  lib.rs
